--- a/views/post/edit.ejs
+++ b/views/post/edit.ejs
@@ -52,7 +52,7 @@
 
 
 
-        <form action="/post/store" method="POST">
+        <form action="/post/update" method="POST">
             <h1 style="text-align: center;">Add Form</h1>
             <% if (messages.error) { %>
                 <h3 style="color: red;">
@@ -60,7 +60,7 @@
                 </h3>
                 <% } %>
 
-
+                    <input value="<%= id %> " name="id" type="hidden" placeholder="title" />
                     <div>
                         <label for="">Title</label>
                         <input value="<%= title %> " name="title" type="text" placeholder="title" />
@@ -75,26 +75,15 @@
                     </div>
                     <div>
                         <label for="">Category</label>
-                        <select name="categoryId" class="form-control">
-                            <% categories.forEach(category=> { %>
-                                <option value="<%= category.id %> ">
-                                    <%= category.name %>
-                                </option>
-                                <% }) %>
-                        </select>
+                        <input value="<%= categoryId %> " name="categoryId" type="text" placeholder="Category ID" />
                     </div>
                     <div>
                         <label for="">Author</label>
-                        <select name="authorId" class="form-control">
-                            <% authors.forEach(author=> { %>
-                                <option value="<%= author.id %> ">
-                                    <%= author.name %>
-                                </option>
-                                <% }) %>
-                        </select>
-                        <div class="mt-3">
-                            <button class="btn-primary" style="width: 100%;">Simpan Data</button>
-                        </div>
+                        <input value="<%= authorId %> " name="authorId" type="text" placeholder="Author ID" />
+                    </div>
+                    <div>
+                        <button class="btn-primary" style="width: 100%;">Simpan Data</button>
+                    </div>
         </form>
     </div>
 
